Update title and app name in index.html

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Health & Wellness Global - Complete Health Platform</title>
+    <title>Health & Wellness Global - AI Health Platform</title>
     <!-- PWA Meta Tags -->
 <meta name="theme-color" content="#2E8B57">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="default">
-<meta name="apple-mobile-web-app-title" content="HealthAI">
+<meta name="apple-mobile-web-app-title" content="Health & Wellness Global">
 <link rel="manifest" href="manifest.json">
 
 <!-- Apple Touch Icons -->
