--- a/index.html
+++ b/index.html
@@ -2464,7 +2464,9 @@ const DEEPSEEK_API_URL = "https://api.deepseek.com/v1/chat/completions";
 // Real AI Health Advisor Function
 async function getDeepSeekHealthAdvice(userMessage) {
     try {
-        const response = await fetch(DEEPSEEK_API_URL, {
+        console.log("Sending to DeepSeek API...");
+        
+        const response = await fetch('https://api.deepseek.com/v1/chat/completions', {
             method: 'POST',
             headers: {
                 'Content-Type': 'application/json',
@@ -2475,23 +2477,22 @@ async function getDeepSeekHealthAdvice(userMessage) {
                 messages: [
                     {
                         role: "system",
-                        content: "You are a professional health advisor. Provide helpful health advice in simple language. Always remind to consult doctors for serious issues."
+                        content: "You are a helpful health advisor."
                     },
                     {
-                        role: "user", 
+                        role: "user",
                         content: userMessage
                     }
                 ],
-                max_tokens: 500,
-                temperature: 0.7
+                max_tokens: 500
             })
         });
 
         const data = await response.json();
         return data.choices[0].message.content;
+        
     } catch (error) {
-        console.error('DeepSeek API Error:', error);
-        return "I'm having trouble connecting right now. Please try again later.";
+        return "Connection error. Please try again.";
     }
 }
         // ===== ENHANCED AI KNOWLEDGE BASE =====
