Add Emergency link to navigation menus

--- a/index.html
+++ b/index.html
@@ -1401,6 +1401,7 @@
                 <!-- Desktop Navigation -->
                 <ul class="nav-links">
                     <li><a href="#home" class="active"><i class="fas fa-home"></i> <span data-translate="home">Home</span></a></li>
+                   <li><a href="#emergency"><i class="fas fa-ambulance"></i> Emergency</a></li>
                     <li><a href="#dashboard"><i class="fas fa-chart-line"></i> <span data-translate="dashboard">Dashboard</span></a></li>
                     <li><a href="#ai-chat"><i class="fas fa-robot"></i> <span data-translate="aiAdvisor">AI Advisor</span></a></li>
                     <li><a href="#food-analysis"><i class="fas fa-utensils"></i> <span data-translate="foodAnalysis">Food Analysis</span></a></li>
@@ -1463,6 +1464,7 @@
         </div>
         <ul class="mobile-nav-links">
             <li><a href="#home" class="active"><i class="fas fa-home"></i> <span data-translate="home">Home</span></a></li>
+            <li><a href="#emergency"><i class="fas fa-ambulance"></i> Emergency</a></li>
             <li><a href="#dashboard"><i class="fas fa-chart-line"></i> <span data-translate="dashboard">Dashboard</span></a></li>
             <li><a href="#ai-chat"><i class="fas fa-robot"></i> <span data-translate="aiAdvisor">AI Advisor</span></a></li>
             <li><a href="#food-analysis"><i class="fas fa-utensils"></i> <span data-translate="foodAnalysis">Food Analysis</span></a></li>
