Fix formatting of CSS display property

--- a/index.html
+++ b/index.html
@@ -781,8 +781,7 @@
             background: #000;
             margin: 0 auto 1rem;
             border-radius: 8px;
-            display: none;
-        }
+            display: none; }
 
         .camera-controls {
             display: flex;
